# tg

./: CMakeLists.txt
app/: CMakeLists.txt
app/tex_test/: App.cpp  App.h  CMakeLists.txt  Mesh.cpp  Mesh.h  mat4.cpp  mat4.h  textest.cpp  vec2f.h  vec3f.h  vec4f.h
app/tex_test/res/: 128x128blue.tga  128x128bluered.tga  128x128green.tga  128x128red.tga  metal1.tga  opengl_logo.tga  test128x128.tga
asset/: plane.blend  texturedplane.blend  weirdthing.blend
lib/: CMakeLists.txt
lib/TGAImage/inc/: TGAImage.h
lib/TGAImage/src/: CMakeLists.txt  TGAImage.cpp
lib/TGAImage/test/: CMakeLists.txt  test_TGAImage.cpp
lib/TGAImage/test/testimage/: 32x32bluesquare.tga  32x32bottomleft.tga  32x32bottomleftrewrite.tga  32x32newbluesquare.tga  32x32newgreensquare.tga  empty.tga
lib/WavefrontObj/inc/: WavefrontObj.h
lib/WavefrontObj/src/: CMakeLists.txt  WavefrontObj.cpp
lib/engine/inc/: Program.h  Shader.h
lib/engine/src/: CMakeLists.txt  Program.cpp  Shader.cpp
lib/engine/test/: CMakeLists.txt  test_Shader.cpp
